--- a/Server/php/pri/apnkey.p8.tmpl
+++ b/Server/php/pri/apnkey.p8.tmpl
@@ -1,8 +1,5 @@
 You must add a file named apnkey.p8 that contains the APNS private key provided by Apple.
 Example: (not a real key)
 -----BEGIN PRIVATE KEY-----
-MIGTAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBHkwdwIBAQQgwYS8llpp1popFR7u
-btajXLUakljdfaljaaoiueka87394akajdsljfaadsfdsafxxAAABDCDEFNWQfbA
-1Y0c8/GKevnecT/V9hTKRCzAHGpHYssCmIpz4sOaABCAAadjfalkjfafd78435vT
-DDODuGip
+(REAL KEY GOES HERE)
 -----END PRIVATE KEY-----
